bb.1, fix help text wrap probs 23 & 24.

--- a/app/css/directives/general.css
+++ b/app/css/directives/general.css
@@ -212,6 +212,9 @@ div.fakeButton {
 .marginLeft80px {
 	margin-left:80px;
 }
+.marginLeft90px {
+	margin-left:90px;
+}
 .marginLeft132px {
 	margin-left:132px;
 }
